Delay the log in background to avoid screen flicker.

--- a/client/application/assets/styles/default.less
+++ b/client/application/assets/styles/default.less
@@ -3,8 +3,8 @@ body, p, label, input, button, select, textarea, .navbar-search {
 }
 
 @-webkit-keyframes delayedFadeIn {
-  0%   { opacity: 0.5; }
-  50%  { opacity: 0.5; }
+  0%   { opacity: 0.01; }
+  50%  { opacity: 0.01; }
   100% { opacity: 1; }
 }
 
@@ -14,8 +14,8 @@ body, p, label, input, button, select, textarea, .navbar-search {
 }
 
 @-moz-keyframes delayedFadeIn {
-  0%   { opacity: 0.5; }
-  50%  { opacity: 0.5; }
+  0%   { opacity: 0.01; }
+  50%  { opacity: 0.01; }
   100% { opacity: 1; }
 }
 
